--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,13 +6,16 @@
 
 .header__inner {
 	background-color: $white;
-	padding: 15px;
+	padding: 15px 34px;
 	position: relative;
 }
 .header-menu {
 	display: flex;
 	li{
 		margin-right: 45px;
+		&:last-child{
+			margin-right: 0;
+		}
 	}
 	a{
 		text-transform: uppercase;
@@ -293,6 +296,88 @@ li.left-sidebar-menu--active{
 		color:#3d3d3d;
 		margin-top: 0;
 		margin-bottom: 40px;
+	}
+}
+
+// Section contacts
+
+.contacts{
+	font-size: 16px;
+	margin-top: 44px;
+	&-img{
+		display: inline-block;
+		margin-right: 12px;
+		vertical-align: middle;
+	}
+	.contacts-phone {
+		display: block;
+		color:$dark;
+		margin-bottom: 22px;
+	}
+	.contacts-mail {
+		display: block;
+		color:$dark;
+		margin-bottom: 26px;
+	}
+	.contacts-address {
+		color:$active-color;
+		line-height: 2;
+		display: block;
+	}
+	
+	&-social-links{
+		margin-top: 40px;
+		li{
+			display: inline-block;
+			margin-right: 15px;
+		}
+		a{
+			width: 32px;
+			height: 32px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: $active-color;
+			border-radius: 50%;
+			font-size: 16px;
+			transition: all .2s;
+			color:$white;
+			&:hover{
+				color:$dark;
+				background-color: rgba($active-color, .3);
+			}
+		}
+	}
+}
+//Section structure
+.structure{
+	margin-top: 35px;
+	&-card {
+		background-color: $white;
+		padding: 25px;
+		margin-bottom: 30px;
+		min-height: 40rem;
+		transition: all .2s;
+		&:hover{
+			box-shadow: 0px 5px 10px 0 rgba(0, 0, 1, 0.1);
+		}
+		&-title {
+			display: block;
+			color:$active-color;
+			text-transform: uppercase;
+			font-size: 16px;
+			margin-bottom: 20px;
+		}
+		small{
+			color: rgba($dark, 0.5);
+			font-size: 12px;
+			display: block;
+			margin-bottom: 20px;
+			line-height: 1.5;
+		}
+		p{
+			line-height: 1.57;
+		}
 	}
 }
 
