--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -398,6 +398,10 @@ li.left-sidebar-menu--active{
 	}
 	&-radio{
 		flex-basis: 50%;
+		&:last-child{
+			flex-basis: 100%;
+			display: flex;
+		}
 		input[type="radio"]{
 			display: none;
 			&:checked{
@@ -409,6 +413,7 @@ li.left-sidebar-menu--active{
 		label{
 			margin-bottom: 20px;
 			display: inline-block;
+			cursor:pointer;
 			&::before{
 				content:'';
 				width: 24px;
@@ -421,7 +426,101 @@ li.left-sidebar-menu--active{
 				border-radius: 50%;
 				transition: all .1s;
 			}
+			small{
+				display: block;
+				margin-left: 28px;
+				font-size: 10px;
+				color: rgba($dark, .5);
+			}
 		}
+	}
+	&-popular{
+		background-color: $active-color;
+		color: $white;
+		text-transform: uppercase;
+		font-size: 10px;
+		padding: 0 5px;
+		margin-left: 16px;
+		height: 25px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		position: relative;
+		&::before{
+			content: '';
+			width: 6px;
+			height: 12.5px;
+			position: absolute;
+			left: -12px;
+			top: 50%;
+			transform:translateY(-50%);
+			border:6px solid transparent;
+			border-right:6px solid $active-color;
+		}
+	}
+	&-legal{
+		font-size: 12px;
+	}
+	h4{
+		margin-top: 0;
+		margin-bottom: 40px;
+		font-size: 24px;
+		font-weight: 400;
+	}
+	&-summ_invest {
+		margin-top: 30px;
+		&_label{
+			margin-right: 10px;
+		}
+		&_num{
+			background-color: $white;
+			padding: 10px 48px;
+			display: inline-block;
+			font-size: 18px;
+		}
+	}
+	&-total{
+		background-color: $white;
+		display: inline-block;
+		text-align: center;
+		padding: 14px 26px;
+		margin-top: 20px;
+		margin-right: 20px;
+		strong{
+			font-size: 18px;
+			color:$active-color;
+			font-weight: 400;
+		}
+		small{
+			font-size: 10px;
+		}
+	}
+	&-monthly{
+		display: inline-block;
+		text-align: center;
+		padding: 14px 0;
+		margin-top: 20px;
+		strong{
+			font-size: 18px;
+			color:$active-color;
+			font-weight: 400;
+		}
+		small{
+			font-size: 10px;
+		}
+	}
+}
+.range-bar{
+	height: 3px;
+	background-color: rgba($dark,.1);
+	.range-handle{
+		width: 24px;
+		height: 24px;
+		top:-11px;
+		border:6px solid $dark;
+	}
+	.range-quantity{
+		background-color: $active-color;
 	}
 }
 
