--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -518,6 +518,7 @@ li.left-sidebar-menu--active{
 		height: 24px;
 		top:-11px;
 		border:6px solid $dark;
+		cursor: pointer;
 	}
 	.range-quantity{
 		background-color: $active-color;
